--- a/public/css/app.css
+++ b/public/css/app.css
@@ -96,7 +96,23 @@ ul {
     display: inline;
     padding: 3px;
 }
-
+.io-dialog {
+    display: none
+}
+.io-dialog.open {
+    display: block
+}
+.io-dialog.open:before {
+    content: '';
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background: #666;
+    opacity: 0.2;
+    z-index: 1001
+}
 .io-tool a {
     opacity: 0.3;
 }
@@ -110,7 +126,12 @@ ul {
 .io-tool a.active {
     opacity: 1.0;
 }
-
+.io-editing-tools {
+    width: auto;
+    position: fixed;
+    right: 55px;
+    top: 20px
+}
 .xml {
     visibility: hidden;
 }
@@ -144,6 +165,28 @@ ul {
     color: #666666;
     background: none;
     border: none
+}
+.io-dialog .content {
+    position: fixed;
+    width: 600px;
+    left: 50%;
+    margin-left: -300px;
+    top: 100px;
+    background: white;
+    padding: 10px 30px 20px 30px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+    border-radius: 2px;
+    height: auto;
+    z-index: 1001
+}
+.keybindings-dialog .content {
+    width: 450px;
+    margin-left: -225px
+}
+
+.keybindings-dialog .binding {
+    padding: 5px 10px;
+    font-family: monospace
 }
 .io-tool {
     margin-right: 10px
